# arus-stream-metawear

./: .gitignore  Pipfile  README.md  index.html  pyproject.toml  requirements.txt  setup.py  stream.html
.github/workflows/: ci.yml  test.yml
arus_stream_metawear/: __init__.py  metawear_stream.py  metawear_timestamp_corrector.py  stream.py
docs/: corrector.html  index.html  stream.html
docs/arus_stream_metawear/: corrector.html  index.html  metawear_stream.html  metawear_timestamp_corrector.html  stream.html
examples/: use_metawear_stream.py
templates/: config.mako
tests/: test_arus_stream_metawear.py
