[tool.poetry]
name = "arus-stream-metawear"
version = "0.1.0"
description = ""
authors = ["qutang <tqshelly@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/qutang/arus-stream-metawear/"
keywords = ['arus', 'activity recognition', 'metawear', 'bluetooth', 'wearable sensor']

[tool.poetry.dependencies]
python = "^3.6"
arus = {git = "https://github.com/qutang/arus.git", rev = "master"}
[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
