[tool.poetry]
name = "arus-stream-metawear"
version = "1.0.1"
description = "arus plugin that helps creating stream for metawear devices"
authors = ["qutang <tqshelly@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/qutang/arus-stream-metawear"
documentation = "https://qutang.github.io/arus-stream-metawear/"
keywords = [
    "ubiquitous computing", "sensing", "data processing", "bluetooth", "internet of things"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "examples/*",
]

[tool.poetry.dependencies]
python = "^3.6"
pymetawear = "^0.12.0"
arus = "^0.4.0"
[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
autopep8 = "^1.4"
pdoc3 = "^0.7.1"
twine = "^1.12"
python-semantic-release = "^4.3"
[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "commit"
upload_to_pypi="false"
patch_without_tag='true'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
